mobile fix: overlapping menu, sticker on top of content and menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ html, body {
     width: 100vw;
     top: 0;
     bottom: 0;
+    z-index: 30;
   }
 
   .menu-right {
@@ -223,7 +224,9 @@ html, body {
   }
 
   .menu-item,
-  .socialmedia-item {
+  .socialmedia-item,
+  .img-item,
+  .iframe-item {
     z-index: 20;
   }
 
@@ -247,11 +250,17 @@ html, body {
     height: 46.3px;
   }
 
+  .img-item,
+  .iframe-item {
+    position: relative;
+  }
+
   .content {
     position: absolute;
     top: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 20;
   }
 
   .placeholder {
@@ -285,5 +294,46 @@ html, body {
     top: 300px;
     left: 100px;
     z-index: 30;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #title-kellyli {
+    background-size: 165px 55px;
+    height: 55px;
+    width: 165px;
+  }
+
+  #title-videos {
+    background-size: 140px 61px;
+    height: 30.5px;
+    width: 140px;
+  }
+
+  #title-videos:hover,
+  #title-videos.active {
+    background-position: 0 -30.5px;
+  }
+
+  #title-graphics {
+    background-size: 130px 65.3px;
+    height: 32.65px;
+    width: 130px;
+  }
+
+  #title-graphics:hover,
+  #title-graphics.active {
+    background-position: 0 -32.65px;
+  }
+
+  #title-photography {
+    background-size: 121px 56.6px;
+    height: 28px;
+    width: 121px;
+  }
+
+  #title-photography:hover,
+  #title-photography.active {
+    background-position: 0 -28px;
   }
 }
